--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity
             android:name=".vainglory"
             android:label="Vainglory" />
+        <activity android:name=".vgheros"
+            android:label="VG Hero"/>
     </application>
 
 </manifest>
