--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,15 +20,18 @@
         <activity
             android:name=".gtaV_Int"
             android:label="GTA V"
-            android:theme="@style/gtaV_theme"/>
+            android:theme="@style/gtaV_theme"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".vainglory"
             android:label="Vainglory"
-            android:theme="@style/vg_theme"/>
+            android:theme="@style/vg_theme"
+            android:parentActivityName=".MainActivity"/>
 
         <activity android:name=".vgheros"
             android:label="VG Hero"
-            android:theme="@style/vg_theme"/>
+            android:theme="@style/vg_theme"
+            android:parentActivityName=".vainglory"/>
     </application>
 
 </manifest>
