--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,22 +16,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".gtaV_Int"
             android:label="GTA V"
-            android:theme="@style/gtaV_theme"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/gtaV_theme" />
         <activity
             android:name=".vainglory"
             android:label="Vainglory"
-            android:theme="@style/vg_theme"
-            android:parentActivityName=".MainActivity"/>
-
-        <activity android:name=".vgheros"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".vg_hero"
             android:label="VG Hero"
-            android:theme="@style/vg_theme"
-            android:parentActivityName=".vainglory"/>
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
