changes in layout appearence

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,9 @@
             android:theme="@style/vg_theme"
             android:parentActivityName=".vainglory" />
 
-
+        <activity android:name=".builds_page"
+            android:label="Builds"
+            android:theme="@style/vg_theme" />
     </application>
 
 </manifest>
