--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,33 +9,34 @@
         android:roundIcon="@mipmap/app_icon_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".MainActivity"/>
         <activity
             android:name=".gtaV_Int"
             android:label="GTA V"
             android:parentActivityName=".MainActivity"
             android:theme="@style/gtaV_theme" />
-
         <activity
             android:name=".vainglory"
             android:label="Vainglory"
-            android:theme="@style/vg_theme"
-            android:parentActivityName=".MainActivity" />
-
-        <activity android:name=".vg_hero1"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/vg_theme" />
+        <activity
+            android:name=".vg_hero1"
             android:label="VG Hero"
-            android:theme="@style/vg_theme"
-            android:parentActivityName=".vainglory" />
-
-        <activity android:name=".builds_page"
+            android:parentActivityName=".vainglory"
+            android:theme="@style/vg_theme" />
+        <activity
+            android:name=".builds_page"
             android:label="Builds"
             android:theme="@style/vg_theme" />
+        <activity
+            android:name=".SplashActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER"/>
+        </intent-filter>
+        </activity>
     </application>
 
 </manifest>
